<resources>
    <string name="app_name">같이와치</string>
    <string name="personal_schedule">개인 일정</string>
    <string name="schedule_name">일정 이름</string>
    <string name="schedule_location">장소</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="repeat">반복 여부</string>
    <string name="repeat_interval">반복 간격(시작일 기준으로 반복)</string>
    <string name="date">날짜</string>
    <string name="success">확인</string>
    <string name="cancel">취소</string>
    <string name="month">한달</string>
    <string name="week">일주일</string>
    <string name="finish_date">종료일</string>
    <string name="update_schedule">일정 수정하기</string>
    <string name="delete">삭제</string>
    <string name="msg_fill_schedule">일정의 모든 항목을 입력해주세요.</string>
    <string name="msg_date_order">시작일은 종료일 이전이어야 합니다.</string>
    <string name="msg_time_order">시작 시간은 종료 시간 이전이어야 합니다.</string>
    <string name="msg_success_create_schedule">일정이 정상적으로 추가되었어요!</string>
    <string name="msg_success_update_schedule">일정이 정상적으로 수정되었어요!</string>
    <string name="msg_success_delete_schedule">일정이 정상적으로 삭제되었어요!</string>
    <string name="https">https:</string>
</resources>