<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="8dp"
    android:background="@drawable/bottom_sheet"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tv_personal_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/personal_schedule"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_schedule_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/schedule_name"
            android:inputType="text"
            android:paddingLeft="12dp"
            tools:layout_editor_absoluteX="100dp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="none"
            android:paddingLeft="12dp"
            android:drawableRight="@drawable/icon_calendar"
            android:paddingRight="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_start_time"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/start_time"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/et_end_time"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/end_time"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_schedule_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/schedule_location"
            android:inputType="text"
            android:paddingLeft="12dp"
            tools:layout_editor_absoluteX="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/repeat"
                android:textColor="@color/black" />

            <Switch
                android:id="@+id/switch_repeat"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="26dp"
                android:text="@string/repeat_interval"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/radio_group_repeat_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/radio_btn_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/week"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_btn_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/month" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_end_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/finish_date"
                android:inputType="none"
                android:drawableRight="@drawable/icon_calendar"
                android:paddingRight="20dp"
                android:paddingLeft="12dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel"
                android:text="@string/cancel"
                android:textColor="@color/dark_gray"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginRight="4dp"/>

            <Button
                android:id="@+id/btn_success"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_success"
                android:text="@string/success"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>